# mortgage-cli

./: .gitignore  README.md  SPEC.md  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: docusaurus.config.ts
docs/docs/: intro.md
docs/docs/cli-reference/: _category_.json  amortize.md  analyze.md  matrix.md  profile.md
docs/docs/configuration/: _category_.json  defaults.md  profiles.md
docs/docs/examples/: _category_.json  basic-analysis.md  scenario-comparison.md
docs/docs/tutorials/: _category_.json  finding-price-range.md  first-property.md  stress-testing.md  understanding-amortization.md
src/mortgage_cli/: __init__.py  __main__.py  main.py
src/mortgage_cli/commands/: __init__.py  amortize.py  analyze.py  matrix.py  profile.py
src/mortgage_cli/config/: __init__.py  defaults.py  manager.py  paths.py
src/mortgage_cli/core/: __init__.py  amortization.py  analyzer.py  calculator.py
src/mortgage_cli/models/: __init__.py  profile.py  property.py  results.py
src/mortgage_cli/output/: __init__.py  colors.py  csv_fmt.py  json_fmt.py  summary.py  table.py
src/mortgage_cli/utils/: __init__.py  currency.py  percentage.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_calculator.py  test_config.py
tests/test_commands/: test_analyze.py  test_matrix.py  test_profile.py
