[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mortgage-cli"
version = "0.1.0"
description = "CLI tool for analyzing rental property investments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Jordan Terry" }
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "numpy-financial>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
mortgage-cli = "mortgage_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mortgage_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.9"
strict = true
